PIC-5324: Newman new UI